# SimLYSO

./: CMakeLists.txt  README.md  SimLYSO.cpp  allRun.mac  energyRun.mac  energyRun_e.mac  energyRun_mu.mac  init_vis_example.mac  input.mac  singleRun.mac  vis.mac
OPTICS/: LYSO_Spectrum.csv  LYSO_rindex.txt  S13360-halfQE.csv  SiO2-refraction.txt  csi_spectrum.txt  d.txt  lyso_abslength.txt
SimLYSO_build/: CMakeCache.txt  G4History.macro  Makefile  Result_2500MeV_-30deg.root  Result_2500MeV_0deg.root  Result_2500MeV_30deg.root  SimLYSO  allRun.mac  cmake_install.cmake  energyRun_mu.mac  energyRun_test.mac  init_vis_example.mac  input.mac  run.mac  run_batch.sh  vis.mac  visualization.mac
SimLYSO_build/OPTICS/: EASIROC.txt  KETEK_QE32.txt  Meltmount1582_AbsLength_cm.txt  S13360-QE_test.csv  SPIROC.txt  al_reflectivity.txt  csi_rindex.txt  si.txt
SimLYSO_build/particle_electron/: Result_100MeV_-10deg.root  Result_100MeV_-20deg.root  Result_100MeV_-30deg.root  Result_100MeV_-40deg.root  Result_100MeV_-50deg.root  Result_100MeV_-60deg.root  Result_100MeV_0deg.root  Result_100MeV_10deg.root  Result_100MeV_20deg.root  Result_100MeV_30deg.root  Result_100MeV_40deg.root  Result_100MeV_50deg.root  Result_100MeV_60deg.root  Result_10MeV_-10deg.root  Result_10MeV_-20deg.root  Result_10MeV_-30deg.root  Result_10MeV_-40deg.root  Result_10MeV_-50deg.root  Result_10MeV_-60deg.root  Result_10MeV_0deg.root  Result_10MeV_10deg.root  Result_10MeV_20deg.root  Result_10MeV_30deg.root  Result_10MeV_40deg.root  Result_10MeV_50deg.root  Result_10MeV_60deg.root  Result_110MeV_-10deg.root  Result_110MeV_-20deg.root  Result_110MeV_-30deg.root  Result_110MeV_-40deg.root  Result_110MeV_-50deg.root  Result_110MeV_-60deg.root  Result_110MeV_0deg.root  Result_110MeV_10deg.root  Result_110MeV_20deg.root  Result_110MeV_30deg.root  Result_110MeV_40deg.root  Result_110MeV_50deg.root  Result_110MeV_60deg.root  Result_120MeV_-10deg.root  (+155 more)
SimLYSO_build/particle_electron_mppc/: Result_100MeV_-10deg.root  Result_100MeV_-20deg.root  Result_100MeV_-30deg.root  Result_100MeV_-40deg.root  Result_100MeV_-50deg.root  Result_100MeV_-60deg.root  Result_100MeV_0deg.root  Result_100MeV_10deg.root  Result_100MeV_20deg.root  Result_100MeV_30deg.root  Result_100MeV_40deg.root  Result_100MeV_50deg.root  Result_100MeV_60deg.root  Result_10MeV_-10deg.root  Result_10MeV_-20deg.root  Result_10MeV_-30deg.root  Result_10MeV_-40deg.root  Result_10MeV_-50deg.root  Result_10MeV_-60deg.root  Result_10MeV_0deg.root  Result_10MeV_10deg.root  Result_10MeV_20deg.root  Result_10MeV_30deg.root  Result_10MeV_40deg.root  Result_10MeV_50deg.root  Result_10MeV_60deg.root  Result_110MeV_-10deg.root  Result_110MeV_-20deg.root  Result_110MeV_-30deg.root  Result_110MeV_-40deg.root  Result_110MeV_-50deg.root  Result_110MeV_-60deg.root  Result_110MeV_0deg.root  Result_110MeV_10deg.root  Result_110MeV_20deg.root  Result_110MeV_30deg.root  Result_110MeV_40deg.root  Result_110MeV_50deg.root  Result_110MeV_60deg.root  Result_120MeV_-10deg.root  (+355 more)
SimLYSO_build/particle_muon/: Result_10050MeV_-10deg.root  Result_10050MeV_-20deg.root  Result_10050MeV_-30deg.root  Result_10050MeV_-40deg.root  Result_10050MeV_-50deg.root  Result_10050MeV_-60deg.root  Result_10050MeV_0deg.root  Result_10050MeV_10deg.root  Result_10050MeV_20deg.root  Result_10050MeV_30deg.root  Result_10050MeV_40deg.root  Result_10050MeV_50deg.root  Result_10050MeV_60deg.root  Result_1050MeV_-10deg.root  Result_1050MeV_-20deg.root  Result_1050MeV_-30deg.root  Result_1050MeV_-40deg.root  Result_1050MeV_-50deg.root  Result_1050MeV_-60deg.root  Result_1050MeV_0deg.root  Result_1050MeV_10deg.root  Result_1050MeV_20deg.root  Result_1050MeV_30deg.root  Result_1050MeV_40deg.root  Result_1050MeV_50deg.root  Result_1050MeV_60deg.root  Result_10550MeV_-10deg.root  Result_10550MeV_-20deg.root  Result_10550MeV_-30deg.root  Result_10550MeV_-40deg.root  Result_10550MeV_-50deg.root  (+372 more)
include/: CathodeSD.hh  DetectorConstruction_SiPM.hh  DetectorConstruction_SiPM.hh~  EventAction.hh  EventAction.hh~  EventActionMessenger.hh  ExtraPhysics.hh  Histo.hh  OptService.h  OpticalPhysics.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunAction.hh~  ScOpticalHit.hh  ScintHit.hh  ScintillatorSD.hh  StackingAction.hh  StepMax.hh  TrackingAction.hh
src/: CathodeHit.cc  CathodeSD.cc  DetectorConstruction_SiPM.cc  DetectorConstruction_SiPM.cc~  EventAction.cc  EventAction.cc~  EventActionMessenger.cc  ExtraPhysics.cc  Histo.cc  OpticalPhysics.cc  PhysicsList.cc  PhysicsList.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  PrimaryGeneratorMessenger.cc  RunAction.cc  RunAction.cc~  ScOpticalHit.cc  ScintHit.cc  ScintillatorSD.cc  Spline.h  StackingAction.cc  StepMax.cc  TrackingAction.cc
(+810 files in other folders)
